--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-form-debounce-field",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "main": "dist/cjs/redux-form-debounce-field.js",
   "module": "dist/es/redux-form-debounce-field.js",
   "types": "dist/es/index.d.ts",
@@ -48,14 +48,12 @@
     "@types/ramda": "^0.25.0",
     "@types/react": "^16.8.2",
     "@types/react-redux": "^7.0.2",
-    "@types/reactcss": "^1.2.3",
-    "@types/recompose": "^0.30.3",
+    "@types/recompose": "^0.30.7",
     "@types/redux": "^3.6.0",
     "@types/redux-form": "^8.1.0",
     "@types/sinon": "^7.0.6",
     "@types/storybook-readme": "^4.0.0",
     "@types/storybook__addon-actions": "^3.4.2",
-    "@types/storybook__addon-knobs": "^4.0.1",
     "@types/storybook__addon-options": "^4.0.1",
     "@types/storybook__react": "^4.0.1",
     "awesome-typescript-loader": "^5.2.1",
@@ -73,6 +71,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.1.0",
@@ -87,14 +86,11 @@
     "sinon": "^7.2.3",
     "storybook-readme": "^4.0.5",
     "ts-node": "^8.0.3",
-    "typescript": "^3.3.3333",
-    "typescript-eslint-parser": "^22.0.0",
-    "yarn": "^1.13.0"
+    "typescript": "3.3.x",
+    "typescript-eslint-parser": "^22.0.0"
   },
   "dependencies": {
-    "lodash.debounce": "^4.0.8",
-    "ramda": "^0.26.1",
-    "recompose": "^0.30.0"
+    "lodash.debounce": "^4.0.8"
   },
   "peerDependencies": {
     "react": "^16.0.0",
